change seo to normal offer

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     />
     <meta
       name="description"
-      content="Zespół na koncerty świąteczne 2025 Kraków - Lazy Swing Band. Świąteczny jazz, kolędy swingowe, profesjonalna oprawa muzyczna. Zespół jazzowy z repertuarem świątecznym: Sinatra, Michael Bublé, jazzowe kolędy. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwacje na grudzień 2025."
+      content="Lazy Swing Band - polski zespół jazzowy — taneczna muzyka, która łączy pokolenia i rezonuje na estradzie, w radiu oraz na międzypokoleniowych potańcówkach. Kultywujemy tradycje muzyki swingowej lat 20. i 30., tworząc niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby. Specjalizujemy się w muzyce przedwojennej, świątecznych standardach jazzowych, tańcu swingowym i kulturze swingowej. Profesjonalny zespół na eleganckie imprezy VIP, gale, bankiety i eventy firmowe."
     />
 
     <!-- PWA Meta Tags -->
@@ -72,7 +72,7 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo192.png" />
     <meta
       name="keywords"
-      content="zespół na koncerty świąteczne 2025, zespół na koncert świąteczny kraków, świąteczny zespół jazzowy, kolędy swingowe, zespół na święta boże narodzenie, zespół jazzowy na grudniowe imprezy, świąteczna muzyka na żywo kraków, zespół na imprezy grudzień, jazzowe kolędy kraków, zespół swingowy małopolska cała polska, świąteczne covery sinatra michael bublé, zespół na bankiet świąteczny, muzyka na koncert świąteczny, zespół jazz christmas kraków, świąteczne standardy jazzowe, zespół na event świąteczny, koncert świąteczny zespół kraków 2025, świąteczny swing band polska, zespół na imprezy grudniowe, christmas jazz kraków"
+      content="zespół na imprezę firmową, zespół na firmówkę, zespół na bankiety, zespół w starym stylu, zespół wielki gatsby, zespół do tańca swingowego, zespół swingowy, polski zespół jazzowy, zespół na potańcówki, zespół retro, zespół z muzyką przedwojenną, zespół na imprezy VIP, taniec swingowy, kultura swingowa, zespół do filmu teatru, zespół na wigilie firmowe, świąteczne hity, bożonarodzeniowe hity, jazz kraków, swing kraków, lazy swing band, muzyka swingowa, eventy firmowe, wesela jazz, eleganckie gale, lato z radiem, polskie radio"
     />
     <meta name="author" content="Lazy Swing Band" />
     <meta
@@ -80,6 +80,8 @@
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
     <meta name="googlebot" content="index, follow" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="last-modified" content="2026-01-12" />
 
     <!-- Geographic targeting -->
     <meta name="geo.region" content="PL-12" />
@@ -92,11 +94,11 @@
     <meta property="og:url" content="https://lazyswingband.com/" />
     <meta
       property="og:title"
-      content="Zespół na Koncerty Świąteczne 2025 - Lazy Swing Band Kraków | Świąteczny Jazz"
+      content="Lazy Swing Band - Polski Zespół Jazzowy | Taneczna Muzyka | Swing, Retro, Wielki Gatsby"
     />
     <meta
       property="og:description"
-      content="Profesjonalny zespół jazzowy na koncerty świąteczne 2025! Świąteczny repertuar: kolędy swingowe, Sinatra, Michael Bublé. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwuj już dziś!"
+      content="Polski zespół jazzowy — taneczna muzyka, która łączy pokolenia i rezonuje na estradzie, w radiu oraz na międzypokoleniowych potańcówkach. Kultywujemy tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca swingowego i kultury swingowej. Idealny zespół na imprezy VIP, eleganckie gale i bankiety."
     />
     <meta
       property="og:image"
@@ -120,11 +122,11 @@
     <meta name="twitter:url" content="https://lazyswingband.com/" />
     <meta
       name="twitter:title"
-      content="Zespół na Koncerty Świąteczne 2025 - Lazy Swing Band Kraków | Świąteczny Jazz"
+      content="Lazy Swing Band - Polski Zespół Jazzowy | Taneczna Muzyka | Swing, Retro, Wielki Gatsby"
     />
     <meta
       name="twitter:description"
-      content="Profesjonalny zespół jazzowy na koncerty świąteczne 2025! Świąteczny repertuar: kolędy swingowe, Sinatra, Michael Bublé. Występy w Krakowie, Małopolsce, całej Polsce. Rezerwuj już dziś!"
+      content="Polski zespół jazzowy — taneczna muzyka, która łączy pokolenia i rezonuje na estradzie, w radiu oraz na międzypokoleniowych potańcówkach. Kultywujemy tradycje muzyki swingowej lat 20. i 30. Tworzymy niezapomniane doświadczenia muzyczne w stylu retro i Wielki Gatsby z repertuarem do tańca swingowego i kultury swingowej. Idealny zespół na imprezy VIP, eleganckie gale i bankiety."
     />
     <meta
       name="twitter:image"
@@ -166,8 +168,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Zespół na Koncerty Świąteczne 2025 - Lazy Swing Band Kraków | Świąteczny
-      Jazz & Swing
+      Lazy Swing Band - Polski Zespół Jazzowy | Taneczna Muzyka | Swing, Retro,
+      Wielki Gatsby
     </title>
 
     <!-- Canonical URL -->
@@ -253,7 +255,11 @@
       }
     </style>
 
-    <!-- DNS prefetch for external resources -->
+    <!-- DNS prefetch and preconnect for faster crawling -->
+    <link rel="preconnect" href="https://www.google.com" crossorigin />
+    <link rel="preconnect" href="https://www.googlebot.com" crossorigin />
+    <link rel="dns-prefetch" href="https://www.google.com" />
+    <link rel="dns-prefetch" href="https://www.googlebot.com" />
     <link rel="dns-prefetch" href="https://open.spotify.com" />
     <link rel="dns-prefetch" href="https://music.youtube.com" />
     <link rel="dns-prefetch" href="https://www.facebook.com" />
@@ -267,7 +273,7 @@
         "@type": "MusicGroup",
         "name": "Lazy Swing Band",
         "alternateName": "LSB",
-        "description": "Polski zespół jazzowy specjalizujący się w świątecznym repertuarze na sezon 2025. Kultywujemy tradycje muzyki swingowej lat 20. i 30. z repertuarem świątecznych kolęd jazzowych, utworów Sinatry i Michaela Bublé. Idealny zespół na koncerty świąteczne, świąteczne bankiety, wydarzenia bożonarodzeniowe w Krakowie, Małopolsce i całej Polsce. Występowaliśmy w programie Lato z Radiem i Telewizją Polską.",
+        "description": "Polski zespół jazzowy — taneczna muzyka, która łączy pokolenia i rezonuje na estradzie, w radiu oraz na międzypokoleniowych potańcówkach. Kultywujemy tradycje muzyki swingowej lat 20. i 30. Specjalizujemy się w tworzeniu niezapomnianych doświadczeń muzycznych w stylu retro i Wielki Gatsby, z repertuarem do tańca swingowego i kultury swingowej, muzyką przedwojenną oraz świątecznymi standardami jazzowymi. Występowaliśmy w programie Lato z Radiem i Telewizją Polską. Idealny na imprezy VIP, eleganckie gale i bankiety.",
         "url": "https://lazyswingband.com",
         "logo": "https://lazyswingband.com/logo-color.png",
         "image": "https://lazyswingband.com/logo-color.png",
@@ -353,8 +359,8 @@
           },
           {
             "@type": "Offer",
-            "category": "Zespół na koncerty świąteczne",
-            "description": "Świąteczne hity, bożonarodzeniowe koncerty, wydarzenia świąteczne z muzyką jazzową",
+            "category": "Zespół na wigilie firmowe",
+            "description": "Świąteczne hity, bożonarodzeniowe koncerty, wigilie firmowe z muzyką jazzową",
             "areaServed": {
               "@type": "Country",
               "name": "Polska"
@@ -375,6 +381,40 @@
           "contactType": "Booking",
           "url": "https://lazyswingband.com#kontakt"
         }
+      }
+    </script>
+
+    <!-- Breadcrumbs Structured Data for faster indexing -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Strona główna",
+            "item": "https://lazyswingband.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "O nas",
+            "item": "https://lazyswingband.com/#o-nas"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Usługi",
+            "item": "https://lazyswingband.com/#uslugi"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "Kontakt",
+            "item": "https://lazyswingband.com/#kontakt"
+          }
+        ]
       }
     </script>
 
@@ -427,9 +467,8 @@
           font-weight: bold;
         "
       >
-        Lazy Swing Band - Zespół na Koncerty Świąteczne 2025 Kraków<br />
-        Świąteczny jazz, kolędy swingowe, Sinatra & Michael Bublé -
-        profesjonalna oprawa muzyczna na święta!<br />
+        Lazy Swing Band - Polski Zespół Jazzowy<br />
+        Taneczna muzyka swingowa, retro, Wielki Gatsby<br />
         Kraków • Małopolska • Cała Polska<br />
         Aby w pełni doświadczyć naszej strony, włącz JavaScript w przeglądarce.
       </p>
