--- a/public/wigilie-firmowe/index.html
+++ b/public/wigilie-firmowe/index.html
@@ -12,16 +12,16 @@
     <meta http-equiv="Expires" content="0" />
 
     <title>
-      Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band |
+      Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band |
       Profesjonalna Oprawa Świąteczna
     </title>
     <meta
       name="description"
-      content="Zespół jazzowy na koncerty świąteczne 2025 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych wydarzeń, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto."
+      content="Zespół jazzowy na koncerty Świąteczne 2026 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych wydarzeń, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto."
     />
     <meta
       name="keywords"
-      content="zespół na koncert świąteczny kraków 2025, koncert świąteczny zespół jazzowy, koncert świąteczny dla firm, oprawa muzyczna wydarzenia świąteczne, zespół na święta firmowe, świąteczne imprezy firmowe kraków, zespół jazzowy koncerty małopolska, oprawa muzyczna event świąteczny, zespół na bankiet świąteczny, christmas party band kraków, zespół na grudniowe imprezy firmowe, sinatra bublé christmas kraków, cała polska"
+      content="zespół na koncert świąteczny kraków 2026, koncert świąteczny zespół jazzowy, koncert świąteczny dla firm, oprawa muzyczna wydarzenia świąteczne, zespół na święta firmowe, świąteczne imprezy firmowe kraków, zespół jazzowy koncerty małopolska, oprawa muzyczna event świąteczny, zespół na bankiet świąteczny, christmas party band kraków, zespół na grudniowe imprezy firmowe, sinatra bublé christmas kraków, cała polska"
     />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://lazyswingband.com/wigilie-firmowe/" />
@@ -30,7 +30,7 @@
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band"
+      content="Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band"
     />
     <meta
       property="og:description"
@@ -53,7 +53,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band"
+      content="Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band"
     />
     <meta
       name="twitter:description"
@@ -142,7 +142,7 @@
     <div class="sticky-cta" role="banner">
       <div class="sticky-cta-content">
         <span class="sticky-cta-text"
-          >Ostatnie wolne terminy Grudzień 2025</span
+          >Ostatnie wolne terminy Grudzień 2026</span
         >
         <div class="sticky-cta-buttons">
           <a
@@ -183,7 +183,7 @@
             itemtype="https://schema.org/ListItem"
             aria-current="page"
           >
-            <span itemprop="name">Koncerty Świąteczne 2025</span>
+            <span itemprop="name">Koncerty Świąteczne 2026</span>
             <meta itemprop="position" content="2" />
           </li>
         </ol>
@@ -191,10 +191,10 @@
 
       <!-- Hero Section -->
       <header class="hero">
-        <div class="hero-badge" aria-label="Sezon 2025">
-          <span>Sezon 2025</span>
+        <div class="hero-badge" aria-label="Sezon 2026">
+          <span>Sezon 2026</span>
         </div>
-        <h1 class="hero-title">Zespół na Koncerty Świąteczne 2025</h1>
+        <h1 class="hero-title">Zespół na Koncerty Świąteczne 2026</h1>
         <p class="hero-subtitle">
           Profesjonalna oprawa muzyczna świątecznych imprez firmowych
         </p>
@@ -475,7 +475,7 @@
           <div class="video-container">
             <iframe
               src="https://www.youtube.com/embed/CLA-kpH-3Cs?si=Ri0D6il-7Z9h8nl1"
-              title="Lazy Swing Band - Świąteczny Jazz na Koncerty Świąteczne 2025 Kraków - Profesjonalna Oprawa Muzyczna"
+              title="Lazy Swing Band - Świąteczny Jazz na Koncerty Świąteczne 2026 Kraków - Profesjonalna Oprawa Muzyczna"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
@@ -738,7 +738,7 @@
       <div class="urgency-banner" role="alert">
         <div class="urgency-content">
           <p class="urgency-title">
-            UWAGA: Grudzień 2025 - ostatnie wolne terminy!
+            UWAGA: Grudzień 2026 - ostatnie wolne terminy!
           </p>
           <p class="urgency-text">
             Wigilie firmowe cieszą się ogromną popularnością. Zarezerwuj swój
@@ -751,7 +751,7 @@
       <!-- Final CTA Section -->
       <section class="cta-section">
         <div class="cta-content">
-          <h2 class="cta-title">Zarezerwuj Termin na Grudzień 2025!</h2>
+          <h2 class="cta-title">Zarezerwuj Termin na Grudzień 2026!</h2>
           <p class="cta-text">
             Nie czekaj do ostatniej chwili - najlepsze terminy na wigilie
             firmowe rozchodzą się błyskawicznie. Skontaktuj się z nami już dziś
@@ -789,7 +789,7 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="footer-brand">
-            <strong>Lazy Swing Band</strong> - Koncerty Świąteczne Kraków 2025
+            <strong>Lazy Swing Band</strong> - Koncerty Świąteczne Kraków 2026
           </p>
           <p class="footer-description">
             Profesjonalna oprawa • Świąteczny jazz • Sinatra & Bublé • Kraków •
@@ -804,7 +804,7 @@
       {
         "@context": "https://schema.org",
         "@type": ["WebPage", "Service"],
-        "name": "Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band",
+        "name": "Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band",
         "description": "Profesjonalna oprawa muzyczna świątecznych wydarzeń - koncerty świąteczne, bankiety, wydarzenia. Kraków, Małopolska, cała Polska.",
         "url": "https://lazyswingband.com/wigilie-firmowe/",
         "provider": {
