--- a/wigilie-firmowe/index.html
+++ b/wigilie-firmowe/index.html
@@ -12,12 +12,12 @@
     <meta http-equiv="Expires" content="0" />
 
     <title>
-      Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band |
+      Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band |
       Profesjonalna Oprawa Świąteczna
     </title>
     <meta
       name="description"
-      content="Zespół jazzowy na koncerty świąteczne 2025 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych wydarzeń, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto."
+      content="Zespół jazzowy na koncerty Świąteczne 2026 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych wydarzeń, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto."
     />
     <meta
       name="keywords"
@@ -30,7 +30,7 @@
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band"
+      content="Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band"
     />
     <meta
       property="og:description"
@@ -53,7 +53,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band"
+      content="Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band"
     />
     <meta
       name="twitter:description"
@@ -183,7 +183,7 @@
             itemtype="https://schema.org/ListItem"
             aria-current="page"
           >
-            <span itemprop="name">Koncerty Świąteczne 2025</span>
+            <span itemprop="name">Koncerty Świąteczne 2026</span>
             <meta itemprop="position" content="2" />
           </li>
         </ol>
@@ -194,7 +194,7 @@
         <div class="hero-badge" aria-label="Sezon 2025">
           <span>Sezon 2025</span>
         </div>
-        <h1 class="hero-title">Zespół na Koncerty Świąteczne 2025</h1>
+        <h1 class="hero-title">Zespół na Koncerty Świąteczne 2026</h1>
         <p class="hero-subtitle">
           Profesjonalna oprawa muzyczna świątecznych imprez firmowych
         </p>
@@ -475,7 +475,7 @@
           <div class="video-container">
             <iframe
               src="https://www.youtube.com/embed/CLA-kpH-3Cs?si=Ri0D6il-7Z9h8nl1"
-              title="Lazy Swing Band - Świąteczny Jazz na Koncerty Świąteczne 2025 Kraków - Profesjonalna Oprawa Muzyczna"
+              title="Lazy Swing Band - Świąteczny Jazz na Koncerty Świąteczne 2026 Kraków - Profesjonalna Oprawa Muzyczna"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
@@ -804,7 +804,7 @@
       {
         "@context": "https://schema.org",
         "@type": ["WebPage", "Service"],
-        "name": "Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band",
+        "name": "Zespół na Koncerty Świąteczne 2026 Kraków - Lazy Swing Band",
         "description": "Profesjonalna oprawa muzyczna świątecznych wydarzeń - koncerty świąteczne, bankiety, wydarzenia. Kraków, Małopolska, cała Polska.",
         "url": "https://lazyswingband.com/wigilie-firmowe/",
         "provider": {
